deployment_strategies_with_istio/enable_bg_deployment/vs_with_block_header.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: name-route
spec:
  hosts:
  - name
  exportTo:
  - "."
  gateways:
  - mesh
  http:
  - match:
    - headers:
        x-test:
          exact: use-v2
    route: # route to v2 matching the header
    - destination:
        host: name
        subset: name-v2
  - route: # default route
    - destination:
        host: name
        subset: name-v1
